@@ -5,6 +5,37 @@ module Simp
   module Packer
     module Publish
       # Create and manage a local (atlus-like) directory tree for vagrant boxes
+      #
+      #   ### Directory structure
+      #
+      #   The local directory tree is structured more-or-less like the
+      #   VagrantCloud box API:
+      #
+      #   ```
+      #   VAGRANT_TREE_ROOT/
+      #   +-- simpci/                            # <-- Vagrant "org" name
+      #       +-- boxes/                         #
+      #           +-- box-name.json              # <-- points to latest version
+      #           +-- box-name/                  # <-- contains box data
+      #           |   +-- versions/              #
+      #           |       +-- 20180918.123456/   # <-- version number/
+      #           |       |   +-- virtualbox.box # <-- 1 version per hypervisor
+      #           |       |   +-- virtualbox.json
+      #           |       [...]
+      #           [...]
+      #   ```
+      #
+      #   ### Notes
+      #
+      #   * A .box file is placed in its versioned directory
+      #   * Box metadata .json files are placed in the relevant directories:
+      #     - One pointing to the latest version
+      #   * If the directory tree does not exist, it will be created.
+      #   * To overwite existing files/links with `:hardlink`, set the
+      #       environment variable `SIMP_PACKER_publish_force=yes`.
+      #
+      # @see https://www.vagrantup.com/docs/vagrant-cloud/api.html#read-a-box
+      #   Vagrant Cloud API documentation for "Read a box"
       class LocalDirTree
         include FileUtils
 
@@ -16,14 +47,17 @@ module Simp
 
         # Install vagrant box into a local directory tree, generate version metadata
         #
-        #   This places a vagrant .box file into a directory tree that is
-        #   structured more-or-less like the VagrantCloud box API.
+        # @param [String] box_path path to the `.box` file
+        # @param [Symbol] action  :hardlink, :copy, or :move .box (Default: :hardlink)
         #
-        #   * The .box file is placed in the versioned directory.
-        #   * metadata .json files are placed in the relevant directories.
-        #   * If the directory tree does not exist, it will be created.
-        #   * To overwite existing files/links with `:hardlink`, set the
-        #     environment variable `SIMP_PACKER_publish_force=yes`.
+        def self.publish(vars_json_path, box_path, vagrant_box_dir, link = :hardlink)
+          converter = Simp::Packer::VarsJsonToVagrantBoxJson.new(vars_json_path)
+          box_data  = converter.vagrant_box_json(box_path)
+          dir_tree  = Simp::Packer::Publish::LocalDirTree.new(vagrant_box_dir)
+          dir_tree.publish(box_data, link) # TODO: env var for copy/link action?
+        end
+
+        # Install vagrant box into a local directory tree, generate version metadata
         #
         # @param [Hash] box_data The Vagrant Cloud data structure,
         #   as generated by {Simp::Packer::VarsJsonToVagrantBoxJson#vagrant_box_json}
